--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.23.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.12.4",
     "swiper": "^11.1.9"
   },
   "devDependencies": {
