--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.14",
+    "react-awesome-stars-rating": "^0.16.2",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
