--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
+    "react-typed": "^2.0.12",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.12.4",
     "swiper": "^11.1.9"
