--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
+    "animate.css": "^4.1.1",
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
